cmake_minimum_required(VERSION 3.15)
project(LeetCodeNote)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCodeNote main.cpp Problem1.cpp Problem2.cpp problem.h Problem3.cpp Problem4.cpp Problem5.cpp Problem6.cpp Problem7.cpp Problem8.cpp Problem9.cpp Problem1352.cpp Problem1351.cpp Problem11.cpp Problem12.cpp Problem13.cpp Problem15.cpp Problem14.cpp Problem17.cpp Problem19.cpp Problem20.cpp Problem21.cpp Problem22.cpp Problem23.cpp Problem24.cpp Problem25.cpp Problem26.cpp Problem27.cpp Problem28.cpp)